Add render() function

--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,9 @@
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
+    gap: 10px;
+}
+
+.field {
+    background-color: lightyellow;
 }
