--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+.container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .board {
+    font-size: 60px;
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
@@ -6,5 +15,10 @@
 }
 
 .field {
-    background-color: lightyellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: lightgreen;
 }
